feat/ modification de ode
